--- a/pom.xml
+++ b/pom.xml
@@ -421,11 +421,15 @@
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>cobertura-maven-plugin</artifactId>
                         <version>2.7</version>
+			    <reportSets>
+		  <reportSet>
+		    <reports>
+		      <report>cobertura</report>
+		    </reports>
+		  </reportSet>
+		</reportSets>
                         <configuration>
-                            <formats>
-                                <format>html</format>
-                                <format>xml</format>
-                            </formats>
+                  
                         </configuration>
                     </plugin>
                     <plugin>
