--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,29 @@
                                     <groupId>org.jacoco</groupId>
                                     <artifactId>jacoco-maven-plugin</artifactId>
                                     <version>0.7.2.201409121644</version>
+					  <executions>
+  	<execution>
+      	<id>prepare-agent</id>
+            <goals>
+            		<goal>prepare-agent</goal>
+            </goals>
+            <configuration>
+<destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+                <propertyName>surefireArgLine</propertyName>
+            </configuration>
+      </execution>
+      <execution>
+            <id>report</id>
+            <phase>test</phase>
+               <goals>
+               	<goal>report</goal>
+               </goals>
+               <configuration>
+<dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
+<outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+               </configuration>
+        </execution>
+    </executions>
                                 </plugin>
                                 <plugin>
                                     <groupId>org.apache.maven.plugins</groupId>
